--- a/koshari.html
+++ b/koshari.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1> Koshari recipe</h1>
-    <img src="./img_sources/Koshari.jpg" alt="Koshari">
+    <img src="./img_sources/koshari.jpg" alt="Koshari">
     <h2> Ingredients </h2>
     <h3>Crispy onion topping</h3>
     <ul>
